Warning fix for RenderLayer. https://bugs.webkit.org/show_bug.cgi?id=131090

Patch by Gergo Balogh <gbalogh.u-szeged@partner.samsung.com> on 2014-04-02
Reviewed by Csaba Osztrogonác.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateDescendantDependentFlags):

Canonical link: https://commits.webkit.org/149145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166641 268f45cc-cd09-0410-ab3c-d52691b4dbfc